<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/full_round">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/pink_A400"
        android:textStyle="bold"
        android:text="@string/app_name"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:maxLines="3"
        android:text="@string/err_large_file"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:text="@string/dismiss"
            android:id="@+id/btn_compress_dismiss"
            android:textColor="@color/pink_A400"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/pink_A400"
            android:id="@+id/btn_compress_ok"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>