<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:titleTextColor="@color/pink_A400"
        android:textAlignment="center"
        android:id="@+id/signup_toolbar"/>

    <View
        android:layout_width="match_parent"
        android:id="@+id/signup_view"
        android:layout_below="@id/signup_toolbar"
        android:background="@color/grey_500"
        android:layout_height="2dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/signup_view"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linlayname"
                android:orientation="horizontal">
                <View android:id="@+id/fakeView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerInParent="true"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_first_name"
                    android:layout_width="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignEnd="@id/fakeView"
                    app:hintEnabled="true"
                    app:errorEnabled="true"
                    android:layout_height="match_parent">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_first_name"
                        android:textColorHint="@color/black"
                        android:inputType="textPersonName"
                        android:hint="@string/first_name"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_last_name"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignStart="@id/fakeView"
                    app:hintEnabled="true"
                    app:errorEnabled="true"
                    android:layout_height="match_parent">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_last_name"
                        android:textColorHint="@color/black"
                        android:inputType="textPersonName"
                        android:hint="@string/last_name"/>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_mobile"
                android:layout_width="match_parent"
                app:hintEnabled="true"
                app:errorEnabled="true"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_mobile"
                    android:textColorHint="@color/black"
                    android:inputType="phone"
                    android:hint="@string/mobile_number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_signup_mail"
                android:layout_width="match_parent"
                app:hintEnabled="true"
                app:errorEnabled="true"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_signup_mail"
                    android:textColorHint="@color/black"
                    android:inputType="textWebEmailAddress"
                    android:hint="@string/e_mail"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_signup_username"
                android:layout_width="match_parent"
                app:hintEnabled="true"
                app:errorEnabled="true"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_signup_username"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_signup_pass"
                android:layout_width="match_parent"
                app:hintEnabled="true"
                app:errorEnabled="true"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_signup_pass"
                    android:textColorHint="@color/black"
                    android:inputType="textWebPassword"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_pincode"
                android:layout_width="match_parent"
                app:hintEnabled="true"
                app:errorEnabled="true"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_pincode"
                    android:textColorHint="@color/black"
                    android:inputType="textWebPassword"
                    android:hint="@string/cnf_password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_referal"
                android:layout_width="match_parent"
                app:hintEnabled="true"
                app:errorEnabled="true"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_referal"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:hint="@string/referal_code"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:id="@+id/tvTermsNcondition"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/terms_and_conditions"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_round_login"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:id="@+id/btn_signup"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.tingsic.View.LoadingView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loader_username"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/signup_loader"
        android:background="@color/transparent_black_10"
        android:visibility="gone">
        <com.tingsic.View.LoadingView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</RelativeLayout>