<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:titleTextColor="@color/pink_A400"
        android:textAlignment="center"
        android:id="@+id/login_toolbar"/>

    <View
        android:layout_width="match_parent"
        android:id="@+id/login_view"
        android:layout_below="@id/login_toolbar"
        android:background="@color/grey_500"
        android:layout_height="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_below="@id/login_view"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:background="@drawable/border_round"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/grey_500"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_round"
            android:inputType="textWebPassword"
            android:hint="@string/password"
            android:textColorHint="@color/grey_500"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/btn_round_login"
            android:id="@+id/btn_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forget_passowrd"
            android:text="@string/forget_password"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/linlay_banner_ads"
        android:layout_height="wrap_content">

    </LinearLayout>
    <com.tingsic.View.LoadingView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/loader_login"/>
</RelativeLayout>