<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar_forget_password"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/pink_A400"
            android:gravity="center"
            android:layout_marginEnd="?android:attr/actionBarSize"
            android:textSize="@dimen/action_bar_name_size"
            android:text="@string/forgetpassword"/>
    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:background="@color/grey_500"
        android:id="@+id/fp_view"
        android:layout_below="@id/toolbar_forget_password"
        android:layout_height="1dp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/fp_view"
        android:id="@+id/il_forget_mail">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:id="@+id/et_forget_mail"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_round"
        android:layout_below="@id/il_forget_mail"
        android:id="@+id/btn_send_mail"
        android:text="@string/send_e_mail"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/forget_loader"
        android:background="@color/transparent_black_05"
        android:visibility="gone">
        <com.tingsic.View.LoadingView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/linlay_banner_ads"
        android:layout_height="wrap_content">

    </LinearLayout>

</RelativeLayout>